--- a/we/index.html
+++ b/we/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h2>这是一个项目</h2>
-    <p id="add"></p>
+    <h2>这是一个改过的项目</h2>
+    <p id="pid"></p>
     <script src="js/script.js"></script>
 </body>
 </html>
