--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -39,7 +39,21 @@
                 </div>
             </div>
         </div>
-        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">
+            <div class="s2">
+                <h2>领导致辞</h2>
+                <small>LFADFR SPEECH</small>
+                <div class="main">
+                    <div>
+                        <p>亲爱的同志们，大家晚上好</p>
+                        <p>我们成立于2009年，现在成员1300多人，我们专注于移动互联网
+                        与信息互动社区领域，坚持“技术领先，概念领先，管理领先”
+                        的发展战略，2015</p>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="swiper-slide">Slide 3</div>
         <div class="swiper-slide">Slide 4</div>
         <div class="swiper-slide">Slide 5</div>
