--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -8,6 +8,9 @@
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.5/css/swiper.css">
 
+    <!-- Link Animate CSS-->
+    <link rel="stylesheet" href="css/animate.min.css">
+
     <!-- Demo styles -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -27,7 +30,12 @@
                 <div class="main">
                     <img src="img/7.png" alt="">
                     <img src="img/8.png" alt="">
-                    <p class="img9">梦想起航 . 再创辉煌</p>
+                    <p class="img9 ani"
+                       swiper-animate-effect="flip"
+                       swiper-animate-duration="1s"
+                       swiper-animate-delay="0.3s">
+                        梦想起航 . 再创辉煌
+                    </p>
                 </div>
                 <div class="footer">
                     <h2>企业名称</h2>
@@ -84,6 +92,9 @@
 
 <!-- Swiper JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.5/js/swiper.js"></script>
+
+<!-- Swiper animate JS-->
+<script src="js/swiper.animate1.0.2.min.js"></script>
 
 <!-- Initialize Swiper -->
 <script src="js/script.js"></script>
