--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -21,28 +21,25 @@
         <div class="swiper-slide">
             <div class="s1">
                 <div class="header">
-                    <img src="img/1.png" alt="">
-                    <img src="img/2.png" alt="">
-                    <img src="img/3.png" alt="">
-                    <img src="img/4.png" alt="">
-                    <img src="img/6.png" alt="">
+                    <img src="img/1.png" alt="" class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="1s" swiper-animate-delay="1s">
+                    <img src="img/2.png" alt="" class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="2s" swiper-animate-delay="2s">
+                    <img src="img/3.png" alt="" class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="1.5s" swiper-animate-delay="1s">
+                    <img src="img/4.png" alt="" class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="2s" swiper-animate-delay="2s">
+                    <img src="img/6.png" alt="" class="ani" swiper-animate-effect="tada" swiper-animate-duration="3s" swiper-animate-delay="0.5s">
                 </div>
                 <div class="main">
-                    <img src="img/7.png" alt="">
-                    <img src="img/8.png" alt="">
-                    <p class="img9 ani"
-                       swiper-animate-effect="flip"
-                       swiper-animate-duration="1s"
-                       swiper-animate-delay="0.3s">
+                    <img src="img/7.png" alt="" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="0.8s">
+                    <img src="img/8.png" alt="" class="ani" swiper-animate-effect="flip" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
+                    <p class="img9 ani"  swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
                         梦想起航 . 再创辉煌
                     </p>
                 </div>
                 <div class="footer">
-                    <h2>企业名称</h2>
-                    <p>2018年1月18日 晚8:00-11:00</p>
+                    <h2 class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.8s" swiper-animate-delay="2s">企业名称</h2>
+                    <p class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.8s" swiper-animate-delay="2s">2018年1月18日 晚8:00-11:00</p>
                     <p>
-                        <img src="img/10.png" alt="">
-                        <img src="img/11.png" alt="">
+                        <img src="img/10.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="10s" swiper-animate-delay="0.3s">
+                        <img src="img/11.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="8s" swiper-animate-delay="0.3s">
                     </p>
                 </div>
             </div>
