--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -30,7 +30,7 @@
                 <div class="main">
                     <img src="img/7.png" alt="" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="0.8s">
                     <img src="img/8.png" alt="" class="ani" swiper-animate-effect="flip" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
-                    <p class="img9 ani"  swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+                    <p class="img9 ani"  swiper-animate-effect="rubberBand" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
                         梦想起航 . 再创辉煌
                     </p>
                 </div>
