--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -21,10 +21,10 @@
         <div class="swiper-slide">
             <div class="s1">
                 <div class="header">
-                    <img src="img/1.png" alt="" class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="1s" swiper-animate-delay="1s">
-                    <img src="img/2.png" alt="" class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="2s" swiper-animate-delay="2s">
-                    <img src="img/3.png" alt="" class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="1.5s" swiper-animate-delay="1s">
-                    <img src="img/4.png" alt="" class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="2s" swiper-animate-delay="2s">
+                    <img src="img/1.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="1s" swiper-animate-delay="1s">
+                    <img src="img/2.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="2s" swiper-animate-delay="2s">
+                    <img src="img/3.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="1.5s" swiper-animate-delay="1s">
+                    <img src="img/4.png" alt="" class="ani" swiper-animate-effect="swing infinite" swiper-animate-duration="2s" swiper-animate-delay="2s">
                     <img src="img/6.png" alt="" class="ani" swiper-animate-effect="tada" swiper-animate-duration="3s" swiper-animate-delay="0.5s">
                 </div>
                 <div class="main">
