--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -66,8 +66,8 @@
                 </div>
                 <div class="footer">
                     <p>
-                        <img src="img/10.png" alt="">
-                        <img src="img/11.png" alt="">
+                        <img src="img/10.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="10s" swiper-animate-delay="0.3s">
+                        <img src="img/11.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="8s" swiper-animate-delay="0.3s">
                     </p>
                 </div>
             </div>
