--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -85,6 +85,10 @@
     <!-- 如果需要导航按钮 -->
     <div class="swiper-button-next"></div>
 
+    <!-- 背景音乐 -->
+    <audio id="mp3" src="mp3/kuaishan1.mp3" autoplay loop></audio>
+    <span id="mp3btn"><img src="img/musicIcon.png" alt=""></span>
+
 </div>
 
 <!-- Swiper JS -->
@@ -92,6 +96,8 @@
 
 <!-- Swiper animate JS-->
 <script src="js/swiper.animate1.0.2.min.js"></script>
+
+
 
 <!-- Initialize Swiper -->
 <script src="js/script.js"></script>
