--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -46,22 +46,22 @@
         </div>
         <div class="swiper-slide">
             <div class="s2">
-                <h2>领导致辞</h2>
-                <small>LFADFR SPEECH</small>
+                <h2 class="ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">领导致辞</h2>
+                <small class="ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="1s">LFADFR SPEECH</small>
                 <div class="main">
                     <div>
-                        <p>亲爱的同志们，大家晚上好</p>
-                        <p>我们成立于2009年，现在成员1300多人，我们专注于移动互联网
+                        <p class="ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="2s" swiper-animate-delay="1s">亲爱的同志们，大家晚上好</p>
+                        <p class="ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="2s" swiper-animate-delay="1.3s">我们成立于2009年，现在成员1300多人，我们专注于移动互联网
                         与信息互动社区领域，坚持“技术领先，概念领先，管理领先”
                         的发展战略，2015完成公司整体改制，变更为股份有限公司，倾力打造具有
                             自主知识产权的高端移动分布平台致力于帮助移动互
                             联网用户过移动设备享受更开放，便捷的联网服务。
                         </p>
-                        <p>我们秉着“真诚，团结，主动，责任”的企
+                        <p class="ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="2s" swiper-animate-delay="1.6s">我们秉着“真诚，团结，主动，责任”的企
                             业文化，立志深圳互联网，打造研发和
                             运营一体的产业链，成为互联网行业值得用户尊敬和信赖的公司。
                         </p>
-                        <span>某某企业</span>
+                        <span class="ani" swiper-animate-effect="bounceInUp" swiper-animate-duration="2s" swiper-animate-delay="1s">某某企业</span>
                     </div>
                 </div>
                 <div class="footer">
