--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -87,6 +87,13 @@
                     <img src="img/xingxingbgm.png" alt="" class="xxbgm">
                     <img src="img/xingxingbgm.png" alt="" class="xbgm">
                 </div>
+                <div class="text">
+                    <p>
+                        <span class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="1s" swiper-animate-delay="1s"></span>
+                        <ul class="ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="2s" swiper-animate-delay="1s">秉着“真诚、团结、主动、责任、创新”
+                    的企业文化，立志深耕移动互联网。</ul>
+                    </p>
+                </div>
                 <div class="footer">
                     <p>
                         <img src="img/10.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="10s" swiper-animate-delay="0.3s">
@@ -95,7 +102,39 @@
                 </div>
             </div>
         </div>
-        <div class="swiper-slide">Slide 4</div>
+        <div class="swiper-slide">
+            <div class="s4">
+                <h2 class="ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">发展数据</h2>
+                <small class="ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="1s">DEVELOPMENT</small>
+                <div class="main">
+                    <img src="img/12.png" alt="">
+                    <div class="main1">
+                        <div class="text1">
+                            <p><img class="text1img1" src="img/s42017.png" alt=""><a>2017年</a>
+                                <img class="text1img2" src="img/s42016.png" alt=""><a>2016年</a></p>
+                        </div>
+                        <div class="text2">
+                            <img src="img/s4text-3.png" alt="">
+                            <p>销售额增长<span style="color: #fff">100%</span></p>
+                            <img src="img/s4-text2-1.png" alt="">
+                            <img src="img/s4-text2-2.png" alt="">
+                        </div>
+                        <div class="text2">
+                            <img src="img/s4text-3.png" alt="">
+                            <p>销售额增长<span style="color: #fff">100%</span></p>
+                            <img src="img/s4-text2-1.png" alt="">
+                            <img src="img/s4-text2-2.png" alt="">
+                        </div>
+                        <div class="text2">
+                            <img src="img/s4text-3.png" alt="">
+                            <p>销售额增长<span style="color: #fff">100%</span></p>
+                            <img src="img/s4-text2-1.png" alt="">
+                            <img src="img/s4-text2-2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="swiper-slide">Slide 5</div>
         <div class="swiper-slide">Slide 6</div>
         <div class="swiper-slide">Slide 7</div>
@@ -105,7 +144,7 @@
     <div class="swiper-pagination"></div>
 
     <!-- 如果需要导航按钮 -->
-    <div class="swiper-button-next"></div>
+    <div class="swiper-button-next swiper-button-white"></div>
 
     <!-- 背景音乐 -->
     <audio id="mp3" src="mp3/kuaishan1.mp3" autoplay loop></audio>
