--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -111,19 +111,7 @@
                     <div class="main1">
                         <div class="text1">
                             <p><img class="text1img1" src="img/s42017.png" alt=""><a>2017年</a>
-                                <img class="text1img2" src="img/s42016.png" alt=""><a>2016年</a></p>
-                        </div>
-                        <div class="text2">
-                            <img src="img/s4text-3.png" alt="">
-                            <p>销售额增长<span style="color: #fff">100%</span></p>
-                            <img src="img/s4-text2-1.png" alt="">
-                            <img src="img/s4-text2-2.png" alt="">
-                        </div>
-                        <div class="text2">
-                            <img src="img/s4text-3.png" alt="">
-                            <p>销售额增长<span style="color: #fff">100%</span></p>
-                            <img src="img/s4-text2-1.png" alt="">
-                            <img src="img/s4-text2-2.png" alt="">
+                                <img class="text1img2" src="img/s42016.png" alt=""><a class="text1a">2016年</a></p>
                         </div>
                         <div class="text2">
                             <img src="img/s4text-3.png" alt="">
