--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -108,17 +108,16 @@
                 <small class="ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="1s">DEVELOPMENT</small>
                 <div class="main">
                     <img src="img/12.png" alt="">
-                    <div class="main1">
-                        <div class="text1">
-                            <p><img class="text1img1" src="img/s42017.png" alt=""><a>2017年</a>
-                                <img class="text1img2" src="img/s42016.png" alt=""><a class="text1a">2016年</a></p>
-                        </div>
-                        <div class="text2">
-                            <img src="img/s4text-3.png" alt="">
-                            <p>销售额增长<span style="color: #fff">100%</span></p>
-                            <img src="img/s4-text2-1.png" alt="">
-                            <img src="img/s4-text2-2.png" alt="">
-                        </div>
+                    <div class="text1">
+                        <img src="img/s42017.png" alt="">
+                        <a href="">2017年</a>
+                        <img src="img/s42016.png" alt="">
+                        <a href="">2016年</a>
+                    </div>
+                    <div class="text2">
+                        <p><img src="img/s4text-3.png" alt="" class="text2jt"><h4>销售额增长<span style="color: #fff">100%</span></h4></p>
+                        <p><img src="img/s4-text2-1.png" alt=""><small>1.2亿</small></p>
+                        <p><img src="img/s4-text2-2.png" alt=""><small>6000万</small></p>
                     </div>
                 </div>
             </div>
