--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -115,10 +115,31 @@
                         <a href="">2016年</a>
                     </div>
                     <div class="text2">
-                        <p><img src="img/s4text-3.png" alt="" class="text2jt"><h4>销售额增长<span style="color: #fff">100%</span></h4></p>
-                        <p><img src="img/s4-text2-1.png" alt=""><small>1.2亿</small></p>
-                        <p><img src="img/s4-text2-2.png" alt=""><small>6000万</small></p>
+                        <p><img src="img/s4text-3.png" alt="" class="text2jt"><h4 class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1s">销售额增长<span style="color: #fff">100%</span></h4></p>
+                        <p><img src="img/s4-text2-1.png" alt="" class="text2img1 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.2s"><small id="text2img1" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="0.2s">1.2亿</small></p>
+                        <p><img src="img/s4-text2-2.png" alt="" class="text2img2 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.2s"><small id="text2img2" style="color: #00bffe" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="0.2s">6000万</small></p>
+
                     </div>
+                    <div class="text3">
+                        <p><img src="img/s4text-3.png" alt="" class="text3jt"><h4 class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1s">盈利额增长<span style="color: #fff">80%</span></h4></p>
+                        <p><img src="img/s4-text2-1.png" alt="" class="text3img1 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.2s"><small id="text3img1" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="0.2s">8000万</small></p>
+                        <p><img src="img/s4-text2-2.png" alt="" class="text3img2 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.2s"><small id="text3img2" style="color: #00bffe" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="0.2s">4800万</small></p>
+                    </div>
+                    <div class="text4">
+                        <p><img src="img/s4text-3.png" alt="" class="text4jt"><h4 class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1s">用户增长<span style="color: #fff">100%</span></h4></p>
+                        <p><img src="img/s4-text2-1.png" alt="" class="text4img1 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.2s"><small id="text4img1" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="0.2s">100万</small></p>
+                        <p><img src="img/s4-text2-2.png" alt="" class="text4img2 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.2s"><small id="text4img2" style="color: #00bffe" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="0.2s">50万</small></p>
+                    </div>
+                    <div class="text5">
+                        <p class="ani" swiper-animate-effect="bounceInUp" swiper-animate-duration="2s" swiper-animate-delay="1s">2017年无论是销售额还是用户数量都有显著增长，
+                        2018年再接再厉，再创辉煌！</p>
+                    </div>
+                </div>
+                <div class="footer">
+                    <p>
+                        <img src="img/10.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="10s" swiper-animate-delay="0.3s">
+                        <img src="img/11.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="8s" swiper-animate-delay="0.3s">
+                    </p>
                 </div>
             </div>
         </div>
