--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -143,9 +143,78 @@
                 </div>
             </div>
         </div>
-        <div class="swiper-slide">Slide 5</div>
-        <div class="swiper-slide">Slide 6</div>
-        <div class="swiper-slide">Slide 7</div>
+        <div class="swiper-slide">
+            <div class="s5">
+                <h2 class="ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">年度之星</h2>
+                <small class="ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="1s">EXCELLENT STAFF</small>
+                <div class="main">
+                    <div class="x">
+                        <img src="img/12.png" alt="">
+                        <img src="img/s5x.png" alt="" class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.3s">
+                        <small>行政部 - 陈某某</small>
+                        <h4>行政之星</h4>
+                    </div>
+                    <div class="y">
+                        <img src="img/12.png" alt="">
+                        <img src="img/y.png" alt="" class="ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="0.3s">
+                        <small>运营部 - 蔡某某</small>
+                        <h4>运营之星</h4>
+                    </div>
+                    <div class="l">
+                        <img src="img/12.png" alt="">
+                        <img src="img/l.png" alt="" class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.3s">
+                        <small>销售部 - 李某某</small>
+                        <h4>销售之星</h4>
+                    </div>
+                    <div class="c">
+                        <img src="img/12.png" alt="">
+                        <img src="img/c.png" alt="" class="ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="0.3s">
+                        <small>产品部 - 王某某</small>
+                        <h4>产品之星</h4>
+                    </div>
+                </div>
+                <div class="footer">
+                    <p>
+                        <img src="img/10.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="10s" swiper-animate-delay="0.3s">
+                        <img src="img/11.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="8s" swiper-animate-delay="0.3s">
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <div class="s6">
+                <h2 class="ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">年会流程</h2>
+                <small class="ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="1s">PROCESSING</small>
+                <div class="main">
+
+
+
+                </div>
+                <div class="footer">
+                    <p>
+                        <img src="img/10.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="10s" swiper-animate-delay="0.3s">
+                        <img src="img/11.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="8s" swiper-animate-delay="0.3s">
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <div class="s7">
+                <h2 class="ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">诚挚邀请</h2>
+                <small class="ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="1s">INVITATION</small>
+                <div class="main">
+
+
+
+                </div>
+                <div class="footer">
+                    <p>
+                        <img src="img/10.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="10s" swiper-animate-delay="0.3s">
+                        <img src="img/11.png" alt="" class="ani" swiper-animate-effect="shake" swiper-animate-duration="8s" swiper-animate-delay="0.3s">
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- 分页器（小圆点） -->
