--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -151,26 +151,26 @@
                     <div class="x">
                         <img src="img/12.png" alt="">
                         <img src="img/s5x.png" alt="" class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.3s">
-                        <small>行政部 - 陈某某</small>
-                        <h4>行政之星</h4>
+                        <small class="ani" swiper-animate-effect="flipInY" swiper-animate-duration="1.5s" swiper-animate-delay="1s">行政部 - 陈某某</small>
+                        <h4 class="ani" swiper-animate-effect="flipInX" swiper-animate-duration="1s" swiper-animate-delay="1s">行政之星</h4>
                     </div>
                     <div class="y">
                         <img src="img/12.png" alt="">
                         <img src="img/y.png" alt="" class="ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="0.3s">
-                        <small>运营部 - 蔡某某</small>
-                        <h4>运营之星</h4>
+                        <small class="ani" swiper-animate-effect="flipInY" swiper-animate-duration="1.5s" swiper-animate-delay="1s">运营部 - 蔡某某</small>
+                        <h4 class="ani" swiper-animate-effect="flipInX" swiper-animate-duration="1s" swiper-animate-delay="1s">运营之星</h4>
                     </div>
                     <div class="l">
                         <img src="img/12.png" alt="">
                         <img src="img/l.png" alt="" class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.3s">
-                        <small>销售部 - 李某某</small>
-                        <h4>销售之星</h4>
+                        <small class="ani" swiper-animate-effect="flipInY" swiper-animate-duration="1.5s" swiper-animate-delay="1s">销售部 - 李某某</small>
+                        <h4 class="ani" swiper-animate-effect="flipInX" swiper-animate-duration="1s" swiper-animate-delay="1s">销售之星</h4>
                     </div>
                     <div class="c">
                         <img src="img/12.png" alt="">
                         <img src="img/c.png" alt="" class="ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="0.3s">
-                        <small>产品部 - 王某某</small>
-                        <h4>产品之星</h4>
+                        <small class="ani" swiper-animate-effect="flipInY" swiper-animate-duration="1.5s" swiper-animate-delay="1s">产品部 - 王某某</small>
+                        <h4 class="ani" swiper-animate-effect="flipInX" swiper-animate-duration="1s" swiper-animate-delay="1s">产品之星</h4>
                     </div>
                 </div>
                 <div class="footer">
@@ -186,9 +186,37 @@
                 <h2 class="ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">年会流程</h2>
                 <small class="ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="1s">PROCESSING</small>
                 <div class="main">
+                    <div class="text1">
+                        <h3 class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s">8:00<small>PM</small> - 9:00<small>PM</small></h3>
+                        <div class="text1div">
+                            <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s"> >>调试设备，年会人员签到入场就餐</p>
+                            <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.6s"> >>年会正式开幕</p>
+                            <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.7s"> >>领导致辞，优秀员工表彰</p>
+                        </div>
 
-
-
+                    </div>
+                    <div class="text2">
+                        <h3 class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="1s">9:00<small>PM</small> - 10:00<small>PM</small></h3>
+                        <div class="text1div">
+                            <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.1s"> >>观看精彩绝伦的员工自排演出节目</p>
+                            <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.2s"> >>激动人心的抽奖环节</p>
+                            <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.3s"> >>领导与员工共进晚餐</p>
+                        </div>
+                    </div>
+                    <div class="text3">
+                        <h3 class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="1.5s">10:00<small>PM</small> - 11:00<small>PM</small></h3>
+                        <div class="text1div">
+                            <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.6s"> >>参与有趣的互动游戏，赢取大奖</p>
+                            <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.7s"> >>各部门员工大合影</p>
+                            <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.8s"> >>晚会结束，大家有序离场</p>
+                        </div>
+                    </div>
+                    <div id="xuxian" style="border-left: 1px dashed #00d7b2;height:58%;line-height:1px;" class="ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+                    <div class="text4png3">
+                        <img src="img/s6img-3.png" alt="" class="ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s">
+                        <img src="img/s6img-3.png" alt="" class="ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="1s">
+                        <img src="img/s6img-3.png" alt="" class="ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="1.5s">
+                    </div>
                 </div>
                 <div class="footer">
                     <p>
