--- a/weichangjing/index.html
+++ b/weichangjing/index.html
@@ -230,10 +230,18 @@
             <div class="s7">
                 <h2 class="ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">诚挚邀请</h2>
                 <small class="ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="1s">INVITATION</small>
+                <img src="img/12.png" alt="" class="s7big ani" swiper-animate-effect="rotateInDownLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
                 <div class="main">
-
-
-
+                    <form action="">
+                        <ul class="mainul">
+                            <li><input type="text" placeholder="* 姓名" class="mainul1 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></li>
+                            <li><input type="text" placeholder="* 电话" class="mainul2 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.4s"></li>
+                            <li><input type="text" placeholder="* 部门" class="mainul3 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s"></li>
+                            <li><buttom class="mainul4 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.6s">提交</buttom></li>
+                        </ul>
+                    </form>
+                    <p class="s7p1 ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="1s">2018年1月18日晚8:00-11:00</p>
+                    <p class="s7p2 ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="1s">xx市xx路xx号xxx大酒店大堂</p>
                 </div>
                 <div class="footer">
                     <p>
