--- a/yaoqinghan/index.html
+++ b/yaoqinghan/index.html
@@ -21,18 +21,35 @@
     <div class="swiper-wrapper">
         <div class="swiper-slide">
             <div class="s1">
-                <img src="img/xu.png" alt="">
-                <img src="img/wei.png" alt="">
-                <img src="img/yi.png" alt="">
-                <img src="img/dai.png" alt="">
-                <img src="img/shan1.png" alt="" class="ani" swiper-animate-effect="flash infinite" swiper-animate-duration="1.5s" swiper-animate-delay="0.5s">
-                <img src="img/shan2.png" alt="" class="ani" swiper-animate-effect="flash infinite" swiper-animate-duration="1.5s" swiper-animate-delay="0.5s">
+                <img src="img/xu.png" alt="" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.7s" swiper-animate-delay="0.5s">
+                <img src="img/wei.png" alt="" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.7s" swiper-animate-delay="0.7s">
+                <img src="img/yi.png" alt="" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.7s" swiper-animate-delay="0.9s">
+                <img src="img/dai.png" alt="" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.7s" swiper-animate-delay="1.1s">
+                <img src="img/shan1.png" alt="" class="ani" swiper-animate-effect="bounceIn alternate infinite" swiper-animate-duration="2s" swiper-animate-delay="1s">
+                <img src="img/shan2.png" alt="" class="ani" swiper-animate-effect="rotateIn infinite" swiper-animate-duration="3s" swiper-animate-delay="1.1s">
                 <div class="main">
-
+                    <h2 class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.3s">2017邀请函</h2>
+                    <p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.6s">盛邦升华</p>
+                    <img src="img/s1img.png" alt="" class="mainimg1 ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="1.8s">
+                    <img src="img/s1small.png" alt="" class="mainsmall1 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="2.2s">
+                    <img src="img/s1small.png" alt="" class="mainsmall2 ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="2.2s">
                 </div>
             </div>
         </div>
-        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">
+            <div class="s2">
+                <img src="img/bigimg.png" alt="" class="lamp ani" swiper-animate-effect="fadeInLeftBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+                <div class="main">
+                    <h1 class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="1s">企业简介</h1>
+                    <img src="img/s1img.png" alt="" class="ani" swiper-animate-effect="flipInY" swiper-animate-duration="1s" swiper-animate-delay="1s">
+                    <img src="img/s1small.png" alt="" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
+                    <img src="img/s1small.png" alt="" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
+                </div>
+                <div class="text">
+                    <img src="img/sbsh_03.png" alt="">
+                </div>
+            </div>
+        </div>
         <div class="swiper-slide">Slide 3</div>
         <div class="swiper-slide">Slide 4</div>
         <div class="swiper-slide">Slide 5</div>
