--- a/yaoqinghan/index.html
+++ b/yaoqinghan/index.html
@@ -46,8 +46,82 @@
                     <img src="img/s1small.png" alt="" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
                 </div>
                 <div class="text">
-                    <img src="img/sbsh_03.png" alt="">
+                    <h3 class="ani" swiper-animate-effect="rotateInDownLeft" swiper-animate-duration="0.5s" swiper-animate-delay="1.7s">学好硬本领</h3>
+                    <h3 class="ani" swiper-animate-effect="rotateInDownRight" swiper-animate-duration="0.5s" swiper-animate-delay="1.7s">赢在软实力</h3>
+                    <div class="textp">
+                        <p><span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="0.5s" swiper-animate-delay="2s">盛</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="0.6s" swiper-animate-delay="2s">邦</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="0.7s" swiper-animate-delay="2s">升</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="0.8s" swiper-animate-delay="2s">职</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="0.9s" swiper-animate-delay="2s">业</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1s" swiper-animate-delay="2s">教</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1.1s" swiper-animate-delay="2s">育</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1.2s" swiper-animate-delay="2s">成</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1.3s" swiper-animate-delay="2s">立</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1.4s" swiper-animate-delay="2s">于</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1.5s" swiper-animate-delay="2s">2004</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1.6s" swiper-animate-delay="2s">年</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1.7s" swiper-animate-delay="2s">4</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1.8s" swiper-animate-delay="2s">月</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="1.9s" swiper-animate-delay="2s">。</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="2s" swiper-animate-delay="2s">目</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="2.1s" swiper-animate-delay="2s">前</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="2.2s" swiper-animate-delay="2s">已</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="2.3s" swiper-animate-delay="2s">成</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="2.4s" swiper-animate-delay="2s">为</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="2.5s" swiper-animate-delay="2s">华</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="2.6s" swiper-animate-delay="2s">北</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="2.7s" swiper-animate-delay="2s">地</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="2.8s" swiper-animate-delay="2s">区</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="2.9s" swiper-animate-delay="2s">办</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3s" swiper-animate-delay="2s">学</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3.1s" swiper-animate-delay="2s">历史</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3.2s" swiper-animate-delay="2s">较</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3.3s" swiper-animate-delay="2s">长</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3.4s" swiper-animate-delay="2s">、</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3.5s" swiper-animate-delay="2s">办</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3.6s" swiper-animate-delay="2s">学</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3.7s" swiper-animate-delay="2s">规</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3.8s" swiper-animate-delay="2s">模</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="3.9s" swiper-animate-delay="2s">较</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4s" swiper-animate-delay="2s">大</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4.1s" swiper-animate-delay="2s">、</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4.2s" swiper-animate-delay="2s">办</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4.3s" swiper-animate-delay="2s">学</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4.4s" swiper-animate-delay="2s">条</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4.5s" swiper-animate-delay="2s">件</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4.6s" swiper-animate-delay="2s">较</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4.7s" swiper-animate-delay="2s">好</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4.8s" swiper-animate-delay="2s">，</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="4.9s" swiper-animate-delay="2s">办</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="5s" swiper-animate-delay="2s">学</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="5.1s" swiper-animate-delay="2s">水</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="5.2s" swiper-animate-delay="2s">平</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="5.3s" swiper-animate-delay="2s">较</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="5.4s" swiper-animate-delay="2s">高</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="5.5s" swiper-animate-delay="2s">的</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="5.6s" swiper-animate-delay="2s">专</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="5.7s" swiper-animate-delay="2s">业</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="5.8s" swiper-animate-delay="2s">IT</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="5.9s" swiper-animate-delay="2s">人</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="6s" swiper-animate-delay="2s">才</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="6s" swiper-animate-delay="2s">职</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="6s" swiper-animate-delay="2s">业</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="6s" swiper-animate-delay="2s">教</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="6s" swiper-animate-delay="2s">育</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="6s" swiper-animate-delay="2s">培</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="6s" swiper-animate-delay="2s">训</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="6s" swiper-animate-delay="2s">机</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="6s" swiper-animate-delay="2s">构</span>
+                            <span class="ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="6s" swiper-animate-delay="2s">。</span>
+
+                            <p class="ani" swiper-animate-effect="bounceInUp" swiper-animate-duration="2s" swiper-animate-delay="3s"  >在业内具有广泛的影响、良好的口碑和社会美誉度。
+                                学校秉承对学生负责、对家长负责、对企业负责、对社会负责的办学理念；致力于培养专业化、技能化，职业化，同时具备良好职业素质和职场适应性的优秀人才。
+                            </p>
+                        </p>
+                    </div>
                 </div>
+                <img src="img/sbsh_03.png" alt="" class="textimg ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="3s">
             </div>
         </div>
         <div class="swiper-slide">Slide 3</div>
