--- a/yaoqinghan/index.html
+++ b/yaoqinghan/index.html
@@ -124,7 +124,17 @@
                 <img src="img/sbsh_03.png" alt="" class="textimg ani" swiper-animate-effect="bounceIn" swiper-animate-duration="1s" swiper-animate-delay="3s">
             </div>
         </div>
-        <div class="swiper-slide">Slide 3</div>
+        <div class="swiper-slide">
+            <div class="s3">
+                <img src="img/bigimg.png" alt="" class="lamp ani" swiper-animate-effect="fadeInLeftBig" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+                <div class="main">
+                    <h1 class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="1s">企业简介</h1>
+                    <img src="img/s1img.png" alt="" class="ani" swiper-animate-effect="flipInY" swiper-animate-duration="1s" swiper-animate-delay="1s">
+                    <img src="img/s1small.png" alt="" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
+                    <img src="img/s1small.png" alt="" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
+                </div>
+            </div>
+        </div>
         <div class="swiper-slide">Slide 4</div>
         <div class="swiper-slide">Slide 5</div>
         <div class="swiper-slide">Slide 6</div>
