修改了a颜色

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>微场景</title>
 </head>
 <body>
- <a href="weichangjing/index.html" style="color: aqua">年会邀请函</a>
+ <a href="weichangjing/index.html" style="color: blue">年会邀请函</a>
 </body>
 </html>
