--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>微场景</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css">
 </head>
 <body>
- <a href="weichangjing/index.html" style="color: blue">年会邀请函</a>
+ <!--<a href="weichangjing/index.html" style="color: blue">年会邀请函</a>-->
+
+ <div class="row">
+     <div class="col-sm-6 col-md-4">
+         <div class="thumbnail">
+             <img src="img/1.jpg" alt="...">
+             <div class="caption">
+                 <h3>微场景</h3>
+                 <p><a href="weichangjing/index.html" target="_blank" class="btn btn-primary" role="button">Button</a></p>
+             </div>
+         </div>
+     </div>
+ </div>
+
+ <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.js"></script>
 </body>
 </html>
