--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css">
 </head>
 <body>
- <!--<a href="weichangjing/index.html" style="color: blue">年会邀请函</a>-->
-
+ <h1 class="text-center">我的作品</h1>
  <div class="row">
      <div class="col-sm-6 col-md-4">
          <div class="thumbnail">
@@ -20,7 +19,7 @@
          </div>
      </div>
  </div>
-
- <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.js"></script>
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.js"></script>
 </body>
 </html>
