--- a/index.html
+++ b/index.html
@@ -1,24 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <title>微场景</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>另一个世界</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+	<link rel="stylesheet" type="text/css" href="css/htmleaf-demo.css">
+	<link rel="stylesheet" href="css/style.css">
+	<!--[if IE]>
+		<script src="http://libs.useso.com/js/html5shiv/3.7/html5shiv.min.js"></script>
+	<![endif]-->
+
+
+
+
 </head>
 <body>
- <h1 class="text-center">我的作品</h1>
- <div class="row">
-     <div class="col-sm-6 col-md-4">
-         <div class="thumbnail">
-             <img src="img/1.jpg" alt="...">
-             <div class="caption">
-                 <h3>微场景</h3>
-                 <p><a href="weichangjing/index.html" target="_blank" class="btn btn-primary" role="button">Button</a></p>
-             </div>
-         </div>
-     </div>
- </div>
+	<header>
+	<h1>世外桃源</h1>
+	<p>欢迎来到我的世界！</p>
+	</header>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-6 col-md-3">
+				<a href="weichangjing" class="thumbnail">
+					<img src="img/2_03.gif" alt="...">
+				</a>
+				<p>微场景</p>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<a href="yaoqinghan" class="thumbnail">
+					<img src="img/1_03.gif" alt="...">
+				</a>
+				<p>邀请函</p>
+			</div>
+		</div>
+	</div>
+
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.js"></script>
 </body>
